--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-header{
+.header{
     display: flex;
     padding-left: 60px;
 }
@@ -13,4 +13,8 @@ nav>a{
     margin-left: 100px;
     text-decoration: none;
     color: black;
+}
+header>img{
+    padding-left: 60px;
+    width: 1350px;
 }
