--- a/style.css
+++ b/style.css
@@ -1,11 +1,15 @@
+*{
+    margin: 0;
+}
 .header {
     display: flex;
-    padding-left: 60px;
+    padding-left: 80px;
 }
 
 nav {
     display: flex;
-    padding: 30px;
+    margin-top: 20px;
+    padding-left: 40px;
 }
 
 nav>a:first-child {
@@ -19,7 +23,7 @@ nav>a {
 }
 
 header>img {
-    padding-left: 60px;
+    padding-left: 80px;
     width: 1350px;
 }
 
@@ -60,7 +64,7 @@ h4 {
 }
 .img2 {
     width: 430px;
-    margin-left: 420px;
+    margin-left: 380px;
 }
 
 .img2>h5 {
@@ -73,4 +77,22 @@ h4 {
     font-size: 34px;
     font-weight: normal;
     color: rgb(81, 81, 81);
+}
+.email{
+    margin-top: 100px;
+    text-align: center;
+    background-color: rgb(193, 193, 193);
+    height: 300px;
+}
+.email>form>label>h1{
+    padding-top: 100px;
+    font-weight: normal;
+}
+form>input{
+    margin-top: 60px;
+    margin-left: 0px;
+    border: none;
+    border-bottom: 1px solid black;
+    width: 310px;
+    background: transparent;
 }
