--- a/style.css
+++ b/style.css
@@ -27,24 +27,34 @@ header>img {
     width: 1350px;
 }
 
-.container {
-    padding-top: 60px;
-    padding-left: 140px;
-    padding-right: 140px;
-}
 .container1 {
     padding-top: 60px;
     padding-left: 140px;
     padding-right: 140px;
 }
+.container2 {
+    padding-top: 60px;
+    padding-left: 140px;
+    padding-right: 140px;
+}
 
-.container>h3,
+.container1>h1,
 h4 {
     font-weight: normal;
 }
-
-.container1 {
+.container1>p{
+    margin-bottom: 20px;
+}
+.container1>h1{
+    margin-bottom: 20px;
+}
+.container1>h4{
+    margin-bottom: 20px;
+}
+.container2 {
     display: flex;
+    justify-content: space-between;
+    width: auto;
 }
 
 .img1 {
@@ -52,11 +62,14 @@ h4 {
 }
 
 .img1>h5 {
+    margin-top: 20px;
     color: gray;
     font-weight: normal;
 }
 
 .img1>h1 {
+    margin-top: 20px;
+    margin-bottom: 20px;
     width: 450px;
     font-size: 34px;
     font-weight: normal;
@@ -64,15 +77,17 @@ h4 {
 }
 .img2 {
     width: 430px;
-    margin-left: 380px;
 }
 
 .img2>h5 {
+    margin-top: 20px;
     color: gray;
     font-weight: normal;
 }
 
 .img2>h1 {
+    margin-top: 20px;
+    margin-bottom: 20px;
     width: 450px;
     font-size: 34px;
     font-weight: normal;
@@ -81,7 +96,7 @@ h4 {
 .email{
     margin-top: 100px;
     text-align: center;
-    background-color: rgb(193, 193, 193);
+    background-color: rgb(235, 234, 234);
     height: 300px;
 }
 .email>form>label>h1{
