--- a/style.css
+++ b/style.css
@@ -1,9 +1,11 @@
-*{
+* {
     margin: 0;
 }
-body{
+
+body {
     overflow-x: hidden;
 }
+
 .header {
     display: flex;
     padding-left: 80px;
@@ -35,6 +37,7 @@ header>img {
     padding-left: 140px;
     padding-right: 140px;
 }
+
 .container2 {
     padding-top: 60px;
     padding-left: 140px;
@@ -45,15 +48,19 @@ header>img {
 h4 {
     font-weight: normal;
 }
-.container1>p{
+
+.container1>p {
     margin-bottom: 20px;
 }
-.container1>h1{
+
+.container1>h1 {
     margin-bottom: 20px;
 }
-.container1>h4{
+
+.container1>h4 {
     margin-bottom: 20px;
 }
+
 .container2 {
     display: flex;
     justify-content: space-between;
@@ -78,6 +85,7 @@ h4 {
     font-weight: normal;
     color: rgb(81, 81, 81);
 }
+
 .img2 {
     width: 430px;
 }
@@ -96,17 +104,20 @@ h4 {
     font-weight: normal;
     color: rgb(81, 81, 81);
 }
-.email{
+
+.email {
     margin-top: 100px;
     text-align: center;
     background-color: rgb(235, 234, 234);
     height: 300px;
 }
-.email>form>label>h1{
+
+.email>form>label>h1 {
     padding-top: 100px;
     font-weight: normal;
 }
-form>input{
+
+form>input {
     margin-top: 60px;
     margin-left: 0px;
     border: none;
@@ -114,14 +125,23 @@ form>input{
     width: 310px;
     background: transparent;
 }
-.button>a{
+
+.button>a {
     text-decoration: none;
     color: rgb(81, 81, 81);
     margin-left: 700px;
     margin-top: 200px;
     height: 400px;
+    border: 1px solid rgb(81, 81, 81);
+    padding: 10px;
 }
-.button{
-    width: 2000px;
-    height: 400px;
+
+.button {
+    width: 1900px;
+    height: 100px;
+    margin-top: 100px;
+}
+footer{
+    background-color: rgb(235, 234, 234);
+    height: 200px;
 }
