--- a/style.css
+++ b/style.css
@@ -129,7 +129,7 @@ form>input {
 .button>a {
     text-decoration: none;
     color: rgb(81, 81, 81);
-    margin-left: 700px;
+    /* margin-left: 700px; */
     margin-top: 200px;
     height: 400px;
     border: 1px solid rgb(81, 81, 81);
@@ -137,11 +137,32 @@ form>input {
 }
 
 .button {
-    width: 1900px;
-    height: 100px;
-    margin-top: 100px;
+    width: 100px;
+    margin-left: 700px;
+    margin-top: 50px;
 }
 footer{
+    display: flex;
+    justify-content: space-around;
+    margin-top: 50px;
     background-color: rgb(235, 234, 234);
-    height: 200px;
+    height: 100px;
+}
+footer>h3{
+    /* padding-left: -240px; */
+    margin-left: -250px;
+    padding-top: 50px;
+    font-weight: normal;
+}
+footer>.container{
+    /* padding-left: -240px; */
+    margin-right: -200px;
+    padding-top: 50px;
+    font-weight: normal;
+}
+footer>.container{
+    display: flex;
+}
+.container>a>img{
+    margin-left: 20px;
 }
